# agent-security-framework

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  README.md  implementation_plan.md  pyproject.toml
docs/: architecture.drawio
examples/policies/: production.yaml
src/agent_security/: __init__.py
src/agent_security/audit/: __init__.py  cosmos_sink.py  logger.py  models.py  sink.py
src/agent_security/cli/: __init__.py  main.py
src/agent_security/compliance/: __init__.py  checker.py  evidence.py  hipaa.py  iso42001.py  pdpa.py  soc2.py
src/agent_security/governance/: __init__.py  exceptions.py  gate.py
src/agent_security/policy/: __init__.py  backends.py  engine.py  loader.py  models.py
tests/: test_audit_logger.py  test_cosmos_sink.py  test_governance_gate.py  test_pdpa_compliance.py  test_policy_engine.py
