[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-security-framework"
version = "0.1.0"
description = "Enterprise agent governance: policy enforcement, identity, audit, and SRE"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "age-saran" }]
keywords = ["ai", "agent", "governance", "security", "policy", "compliance"]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "cryptography>=41.0",
    "httpx>=0.25",
    "click>=8.0",
    "azure-cosmos>=4.7",
    "azure-identity>=1.16",
    "msgraph-sdk>=1.5",
]
azure = ["azure-cosmos>=4.7", "azure-identity>=1.16", "azure-mgmt-containerinstance>=10.0"]
teams = ["msgraph-sdk>=1.5", "msal>=1.28"]
langchain = ["langchain-core>=0.2"]
bedrock = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
agsec = "agent_security.cli.main:cli"

[project.urls]
Repository = "https://github.com/age-saran/agent-security-framework"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_security"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
